--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "redis-express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.5"
   }
 }
